[package]
name = "shape_mapper"
default-run = "shape_mapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shape_mapper"
path = "source/main.rs"

[[bin]]
name = "choose_cities"
path = "source/choose_cities.rs"

[dependencies]
approx = "0.3"
anyhow = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shapefile = "0.6"
titlecase = "3.3"
